@@ -46,8 +46,8 @@
     at <a href="http://gitorious.org/">gitorious.org</a>.
     </p>
 
-    The most recent tarball is <a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9b-par.tar.gz">pdnsd-1.2.9b-par.tar.gz</a>
-    (<a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9b-par.tar.gz.asc">GPG signature</a>).<br>
+    The most recent tarball is <a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9d-par.tar.gz">pdnsd-1.2.9d-par.tar.gz</a>
+    (<a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9d-par.tar.gz.asc">GPG signature</a>).<br>
     The most recent RPM packages are:
 <table cellspacing=1 cellpadding=7>
   <tr>
@@ -56,20 +56,20 @@
     <td width="60%"><b>Description</b></td>
   </tr>
   <tr>
-    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9b-par.src.rpm">pdnsd-1.2.9b-par.src.rpm</a></td>
-    <td width="10%" align=right>514kB</td>
+    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9d-par.src.rpm">pdnsd-1.2.9d-par.src.rpm</a></td>
+    <td width="10%" align=right>518kB</td>
     <td width="60%">Source RPM (binary packages can also be built directly from the tarball).
     </td>
   </tr>
   <tr>
-    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9b-par_sl6.i686.rpm">pdnsd-1.2.9b-par_sl6.i686.rpm</a></td>
+    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9d-par_sl6.i686.rpm">pdnsd-1.2.9d-par_sl6.i686.rpm</a></td>
     <td width="10%" align=right>???</td>
     <td width="60%">i686 binary built on a Scientific Linux 6.2 system.
     </td>
   </tr>
   <tr>
-    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9b-par_sl6.x86_64.rpm">pdnsd-1.2.9b-par_sl6.x86_64.rpm</a></td>
-    <td width="10%" align=right>282kB</td>
+    <td width="30%"><a href="http://members.home.nl/p.a.rombouts/pdnsd/releases/pdnsd-1.2.9d-par_sl6.x86_64.rpm">pdnsd-1.2.9d-par_sl6.x86_64.rpm</a></td>
+    <td width="10%" align=right>284kB</td>
     <td width="60%">x86_64 binary built on a Scientific Linux 6.2 system.
     </td>
   </tr>
@@ -90,7 +90,7 @@
     <hr>
     <br>
     <p>
-      <i>Last revised: 24 Apr 2012 by Paul A. Rombouts</i>
+      <i>Last revised: 08 May 2012 by Paul A. Rombouts</i>
     </p>
   </body>
 </html>
