@@ -4,7 +4,7 @@
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
 .\" This manpage has been edited manually by Paul A. Rombouts.
-.TH "PDNSD\-CTL" "8" "Sep 2008" "pdnsd 1.2.9b-par" ""
+.TH "PDNSD\-CTL" "8" "Sep 2008" "pdnsd 1.2.9d-par" ""
 .SH NAME
 \fBpdnsd\-ctl\fP \- controls pdnsd
 .SH SYNOPSIS
