@@ -8,7 +8,7 @@ the Free Software Foundation; either version 3, or (at your option) any later
 version.
 You can find a copy of the GNU GPL in the file COPYING in the source or
 documentation directory.
-This manual is up-to-date for version 1.2.9b. For older documentation, please
+This manual is up-to-date for version 1.2.9d. For older documentation, please
 refer to the doc directory of the respective pdnsd package.
 If you want a quicker introduction to pdnsd, you can try some of the HOWTOs
 available on the web. For Apple Mac users, Brian Wells has published a good
@@ -993,6 +993,15 @@ udpbufsize=number;
 New in version 1.2.9: This option sets the upper limit on the size of UDP DNS
 messages. The default is 1024.
 See also the edns_query server option below.
+
+weak_cache=rr_type[,rr_type[,rr_type[,...]]];
+New in version 1.2.9d: This option allows you to specify a list of RR types
+that you don't want to cache long term. This allows the remaining RR types to
+remain longer in the cache when the cache gets full.
+The RR types are specified using their official names from the RFCs in
+capitals. The command pdnsd-ctl list-rrtypes will give you a complete list of
+those types.
+This option does not effect locally defined records.
 
 
 2.1.2 server Section
@@ -2013,5 +2022,5 @@ status.h              pdnsd's interface to pdnsd-ctl.
 Copyright (C) 2000, 2001 Thomas Moestl
 Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2012 Paul A. Rombouts
 
-Last revised: 19 April 2012 by Paul A. Rombouts
+Last revised: 8 May 2012 by Paul A. Rombouts
 
